--- a/.editorconfig
+++ b/.editorconfig
@@ -6,22 +6,18 @@ insert_final_newline = true
 charset = utf-8
 indent_style = space
 
-[*.{htm,html,ejs}]
+[*.{htm,html,ejs,jade,pug}]
 indent_size = 2
 indent_style = space
 
-[*.{scss,sass,css}]
+[*.{scss,sass,css,styl}]
 indent_size = 2
 indent_style = space
 
-[*.{js,jsx}]
+[*.{js,jsx,coffee}]
 indent_size = 4
 indent_style = space
 
-[*.json]
+[*.{json,xml,yml}]
 indent_size = 2
-indent_style = space
-
-[bin/www]
-indent_size = 4
 indent_style = space
